--- a/app/design/frontend/Codazon/fastest/fashion/Magento_CatalogSearch/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_CatalogSearch/web/css/source/_module.less
@@ -24,7 +24,7 @@
 //--------------------------------------
 
 & when (@media-common = true) {
-.mobile-search-content > .mobile-search-form-container{display:none}
+//.mobile-search-content > .mobile-search-form-container{display:none}
 .block-search {
     margin-bottom: 0!important;
     .block {
