--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/web/css/source/_module.less
@@ -658,4 +658,10 @@
             padding-right: 18px !important;
         }
     }
+    .page-header .switcher {
+        margin-bottom: 0;
+        .options {
+            display: none;
+        }
+    }
 }
