--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_header.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_header.less
@@ -305,6 +305,7 @@
                 display:inline-block;
                 vertical-align:top;
                 width: 128px;
+                height: 32px;
             }
 			.main-logo{display:none;}
 			.rtl-layout &{
