--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
@@ -888,7 +888,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 			padding: 10px 70px 10px 0;
 		}
 		.icon-font{
-			float:left; font-size:0; width:40px; height:40px; line-height:40px; text-align:center; position: absolute; left: 0; top:0;
+			float:left; font-size:0; width:40px; height:40px; line-height:40px; text-align:center; position: absolute; left: 0; top:10px;
             display: inline-block;
             font-family: 'icomoon';
             speak: none;
@@ -905,8 +905,8 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 				right:0;
 			}
 			&:before{
-				font-size:30px;
-				line-height:55px;
+				font-size:40px;
+				line-height:40px;
 			}
 			&:hover{
 				//.abs-cssall(#ffffff, #1e84cc, #1e84cc);
