--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_header.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_header.less
@@ -8,6 +8,9 @@
 		.header-wrapper-content{
 			.lib-css(color, @header_cart_background);
 			a{.abs-link(@header_cart_background, @header_hover_text);}
+            .header-wrapper-center {
+                display: none;
+            }
 		}
 		.header-panel-right{
 			float:right;
@@ -743,7 +746,7 @@
 
 		//search
 			.header-wrapper-middle{
-			padding: 0 15px 12px;
+			padding: 10px 15px 12px;
 		}
 		.mobile-search-wrapper{
 			.block-search .control{
