--- a/app/code/Magedelight/Bundlediscount/view/adminhtml/layout/catalog_product_new.xml
+++ b/app/code/Magedelight/Bundlediscount/view/adminhtml/layout/catalog_product_new.xml
@@ -26,7 +26,7 @@
 * @author Magedelight <info@magedelight.com>
 */
 -->
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="admin-2columns-left" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="admin-1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
 
     <head>
         <script src="prototype/prototype.js"/>
