捆绑文案，后台新增产品布局

--- a/app/code/Magedelight/Bundlediscount/view/frontend/templates/bundle.phtml
+++ b/app/code/Magedelight/Bundlediscount/view/frontend/templates/bundle.phtml
@@ -127,16 +127,30 @@ $helper = $this->helper('Magedelight\Bundlediscount\Helper\Data');
                                                         ?>
                                                         </span>
                                                 </p>
+                                            <?php else: ?>
+                                            <p class="price-container">
+                                                <span class="new-price bundle_new_price_<?= /* @noEscape */ $bundle->getId() ?>"><?= /* @noEscape */ $totals['discount_label'].' OFF'; ?></span>
+                                            </p>
                                             <?php endif; ?>
 
                                             <?php if ($bundle->getDiscountType() == '0' || (!$bundle->hasOptions() && !$bundle->hasCustomOptions())): ?>
-                                                <p class="discount-info"><?= /* @noEscape */ $totals['discount_label']. ' bundled discount.' ?></p>
-                                                <p class="amount-info">
-                                                    - <span class="bundle_new_discount_amount_<?= /* @noEscape */ $bundle->getId() ?>">
+                                                 <?php if (!$bundle->hasOptions() && !$bundle->hasCustomOptions()): ?>
+                                                    <p class="discount-info"><?= /* @noEscape */ $totals['discount_label']. ' bundled discount.' ?></p>
+                                                    <p class="amount-info">
+                                                        - <span class="bundle_new_discount_amount_<?= /* @noEscape */ $bundle->getId() ?>">
                                                     <?= /* @noEscape */ $priceHelper->currency($totals['discount_amount'], true, false); ?></span>  bundled discount on buying this offer.
-                                                </p>
+                                                    </p>
+                                                 <?php else: ?>
+                                                    <p class="amount-info">
+                                                        Get a <?= /* @noEscape */ $totals['discount_label'] ?> off bundle discount.<br/>
+                                                        You can choose the number of your needed products.
+                                                    </p>
+                                                 <?php endif; ?>
                                             <?php else: ?>
-                                                   <p class="discount-info"><?= /* @noEscape */ $totals['discount_label']. ' discount.' ?></p>
+                                                <p class="amount-info">
+                                                    Get a <?= /* @noEscape */ $totals['discount_label'] ?> off bundle discount.<br/>
+                                                    You can choose the number of your needed products.
+                                                </p>
 
                                             <?php endif; ?>
                                             <?php if ($bundle->canShowAddToCartButton()): ?>
