敏感词匹配规则修改

--- a/app/code/Ecomteck/AdvancedContact/view/frontend/templates/result.phtml
+++ b/app/code/Ecomteck/AdvancedContact/view/frontend/templates/result.phtml
@@ -31,7 +31,7 @@
         color: #01B300;
         padding-right: 14px;
     }
-    .content {
+    .verrified-title-content {
         font-family: 'Roboto';
         font-size: 14px;
         line-height: 16px;
@@ -41,6 +41,6 @@
     <!-- VERIFIED -->
     <div class="verrified-title">
         <h3>SUCCEED</h3>
-        <div class="content">Thanks for contacting us with your comments and questions. We'll respond to you very soon.</div>
+        <div class="verrified-title-content">Thanks for contacting us with your comments and questions. We'll respond to you very soon.</div>
     </div>
 </div>
