修改活动列表页显示筛选项逻辑。

--- a/app/code/Codazon/AjaxLayeredNavPro/view/frontend/templates/layer/view.phtml
+++ b/app/code/Codazon/AjaxLayeredNavPro/view/frontend/templates/layer/view.phtml
@@ -46,7 +46,7 @@
             ?>
             <?php
                 $currentCategory = $block->getLayer()->getCurrentCategory()->getName();
-                $isEventCategory = $currentCategory == "Christmas Sales";
+                $isEventCategory = ($block->getLayer()->getCurrentCategory()->getId() == "106");
             ?>
             <?php foreach ($block->getFilters() as $filter): ?>
                 <?php if ($filter->getItemsCount()): ?>
