联系我们提交文案修改

--- a/app/code/Ecomteck/AdvancedContact/view/frontend/templates/result.phtml
+++ b/app/code/Ecomteck/AdvancedContact/view/frontend/templates/result.phtml
@@ -41,6 +41,6 @@
     <!-- VERIFIED -->
     <div class="verrified-title">
         <h3>SUCCEED</h3>
-        <div class="verrified-title-content">Thanks for contacting us with your comments and questions. We'll respond to you very soon.</div>
+        <div class="verrified-title-content">Thanks for contacting us:) We will get back to you within 24 hours (Mon-Fri).</div>
     </div>
 </div>
