首页Discounts & Deals模块新增打折角标。

--- a/app/design/frontend/Codazon/fastest/hightech2/Codazon_ProductFilter/templates/grid_slider_1.phtml
+++ b/app/design/frontend/Codazon/fastest/hightech2/Codazon_ProductFilter/templates/grid_slider_1.phtml
@@ -28,7 +28,23 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
      */
     $pos = $block->getPositioned();
     $row = 1;
+
+    $objectManager = \Magento\Framework\App\ObjectManager::getInstance();
+    $smile = $objectManager->get('Smile\ProductLabel\Block\ProductLabel\ProductLabel');
     ?>
+    <style>
+        .top_right {
+            position: absolute;
+            top: 0;
+            z-index: 2;
+            right: 5px;
+            max-width: 35%;
+        }
+        .top_right img {
+            margin-top: 16px;
+            padding: 5px;
+        }
+    </style>
     <div class="block widget block-products-list <?php /* @escapeNotVerified */ echo $viewMode; ?>">
 		<?php if ($title):?>
 		<div class="block-title">
@@ -55,7 +71,7 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 				>
 				    <?php /** @var $_product \Magento\Catalog\Model\Product */ ?>
 				    <?php foreach ($_productCollection as $_product): ?>
-
+                    <?php $smile->setProduct($_product); ?>
 					<?php if ($iterator%$row==0 || $iterator == 0): ?>
 					<div class="item-slider">
 				        <?php endif; ?>
@@ -75,6 +91,16 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
                                 <div class="cdz-product-top">
 									<a href="<?php /* @escapeNotVerified */ echo $_product->getProductUrl() ?>" class="product photo product-item-photo" tabindex="-1">
 										<span class="main-image">
+                                            <?php $productLabels = $smile->getProductLabels(); ?>
+                                            <?php if ($productLabels) : ?>
+                                                <?php foreach($productLabels as $class => $labels) :?>
+                                                    <div class="<?php echo $class; ?>">
+                                                        <?php foreach ($labels as $label) : ?>
+                                                            <img src="<?php echo $label['image']; ?>" alt="<?php echo $label['alt'] ?? ''; ?>" title="<?php echo $label['alt'] ?? ''; ?>"/>
+                                                        <?php endforeach ;?>
+                                                    </div>
+                                                <?php endforeach; ?>
+                                            <?php endif; ?>
 											<?php echo $productImage->toHtml(); ?>
 										</span>
 										<span class="hover-image">
