--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/layout/catalog_product_view.xml
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/layout/catalog_product_view.xml
@@ -7,6 +7,7 @@
 -->
 <page layout="1column" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
+        <css src="Codazon_ThemeOptions::css/swiper-bundle.min.css"/>
         <css src="Codazon_ThemeOptions::css/product.css"/>
         <script src="Codazon_ThemeOptions::js/product.js"/>
     </head>
